@@ -320,7 +320,10 @@ void cpu_core_loop_cpc(void)
 
 			//Bit de vsync
 			//Duracion vsync
-			z80_byte vsync_lenght=cpc_ppi_ports[3]&15;
+			/*z80_byte vsync_lenght=cpc_ppi_ports[3]&15;
+
+			//Si es 0, en algunos chips significa 16
+			if (vsync_lenght==0) vsync_lenght=16;
 			//cpc_ppi_ports[1];
 			if (t_scanline>=0 && t_scanline<=vsync_lenght-1) {
 			//if (t_scanline>=0 && t_scanline<=7) {
@@ -331,7 +334,7 @@ void cpu_core_loop_cpc(void)
 			else {
 				//printf ("NO enviando vsync en linea %d\n",t_scanline);
 				cpc_ppi_ports[1] &=(255-1);
-			}
+			}*/
 
 		}
 
