@@ -11,6 +11,7 @@ Version 7.3. 15 April 2019 - xxx edition
 -Added hdf support to MMC emulation
 
 -Fixed bug having more than 256 text to adventure keyboard words
+-Fixed bug on CPC vertical scrolling
 
 
 Version 7.2. 10 April 2019 - Neula edition
